<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, EnvSocialAppActivity!</string>
    <string name="app_name">Envived</string>
    <string name="app_id">114985135329363</string>
    
    <!-- Search labels -->
    <!-- The label for use as a searchable item -->
    <string name="main_search_label">Envived</string>
    <string name="feature_search_label">Envived</string>
    
    <string name="main_search_hint">Search Envived locations</string>
    <string name="feature_search_hint">Search location feature</string>
    
    <string name="main_settings_description">Selections for current environment</string>
    <string name="feature_settings_description">Feature data of the current location</string>
    
    <plurals name="search_results">
      <item quantity="one">%1$d result for \"%2$s\": </item>
      <item quantity="other">%1$d results for \"%2$s\": </item>
    </plurals>
    
    <string name="search_no_results">No results found for \"%s\"</string>
    <string name="menu_search">Search</string>
    
    <string name="menu_comments">Comments</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_add">ADD</string>
    <string name="menu_refresh">Refresh</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_checkout">Checkout</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_quit_anonymous">Quit Anonymous</string>
    
    
    <!-- Menu item names -->
    <string name="item_register_order_notifications">Start notifications</string>
    <string name="item_unregister_order_notifications">Stop notifications</string>
    
    
    <!-- Button labels -->
    <string name="btn_anonymous">Let\'s go! (Anonymous)</string>
    <string name="btn_fbconnect">Sign up with Facebook</string>
    <string name="btn_register">Create Account</string>
    <string name="btn_login">Log In</string>
    <string name="btn_checkin">Check In</string>

    <string name="btn_order">Order</string>
    <string name="btn_notification_register">Register</string>
    <string name="btn_check">Check Please!</string>
    <string name="btn_tab">View Tab</string>
    <string name="btn_call_waiter">Call Waiter</string>
    <string name="btn_filter">Filter&#8230;</string>
    <string name="btn_history">View History</string>
    <string name="btn_resolve">Resolve</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_more">Show More</string>
    <string name="btn_submit">Submit</string>
    
    <string name="btn_c2dm_reg">Register GCM</string>
    <string name="btn_c2dm_unreg">Unregister GCM</string>

    
    
    <!-- Labels -->
    <string name="lbl_attention">Attention</string>
    <string name="lbl_warning">Warning</string>
    
    <string name="lbl_login">Log in</string>
    <string name="lbl_register">Create Your Envived Account</string>
    <string name="lbl_current_checkin">Current checkin</string>
    <string name="lbl_no_checkin_location">No location selected.</string>
    <string name="lbl_details_features">Check out below the list of options for %1$s.</string>
    <string name="lbl_browse_locations">Browse locations for %1$s</string>
    <string name="lbl_presentation_comments">View comments for: %1$s</string>
     <string name="lbl_comments">View comments for: %1$s</string>
    
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_first">First Name</string>
    <string name="lbl_last">Last Name</string>
    <string name="lbl_affiliation">Affiliation</string>
    <string name="lbl_interests">Research Interests</string>
    <string name="lbl_group">Group</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_no_orders">No orders.</string>
    <string name="lbl_order_details">Order details.</string>
    <string name="lbl_order_request">Order request.</string>
    <string name="lbl_order_message_details">Message details.</string>
    <string name="lbl_location_name">AREA_NAME</string>
    <string name="lbl_abstract">Abstract:</string>
    <string name="lbl_post_comment">Post a comment</string>
    <string name="lbl_comments">Comments</string>
    <string name="lbl_comments_request">Comment request.</string>
    <string name="lbl_people_name">Name:</string>
    <string name="lbl_people_affiliation">Affiliation:</string>
    <string name="lbl_people_research_interests">Research Interests:</string>
    <string name="lbl_authenticated_users">Authenticated Users:</string>
    <string name="lbl_subject">Subject:</string>
    <string name="lbl_content">Content:</string>
    
    
    <!-- Tabs -->
    <string name="tab_description">Details</string>
    <string name="tab_program">Program</string>
    <string name="tab_order">Order</string>
    <string name="tab_order_manager">Order Manager</string>
    <string name="tab_people">People</string>
    
    
    <!-- Message -->
    <string name="no_network_connection_toast">No network connection.</string>
    
    <string name="msg_internal_error">Oops. Internal Error.</string>
    <string name="msg_malformed_checkin_url">The scanned QR Code is not an Envived QR code.</string>
    <string name="msg_create_anonymous_error">Could not proceed to anonymous user view. Please try loging in.</string>
    <string name="msg_delete_anonymous_error">Could not delete anonymous user. Please try again later.</string>
    <string name="msg_bad_checkin_response">Service checkin problem or wrong URI. Please try again later.</string>
    <string name="msg_checkout_successful_location">You are now checked out from %1$s.</string>
    <string name="msg_checkout_successful">You are now checked out.</string>
    <string name="msg_checkout_error_location">Error checking out from %1$s. Please try again later.</string>
    <string name="msg_checkout_error">Error checking out. Please try again later.</string>
    <string name="msg_bad_login_response">Service login problem. Please try again later.</string>
    <string name="msg_logout_error">Error performing sign out. Please try again later.</string>
    <string name="msg_bad_login_response">Service login problem. Please try again later.</string>
    <string name="msg_bad_register_response">Service registration problem. Please try again later.</string>
    
    <string name="msg_gcm_registered">Envived Notification Service is now registered.</string>
    <string name="msg_gcm_unregistered">Envived Notification Service is now unregistered.</string>
    <string name="msg_gcm_already_registered">Envived Notification Service already registered.</string>
    <string name="msg_gcm_registration_error">Envived Notification Service registration error. Please use the Settings Menu to try registering again later.</string>
    
    <string name="msg_unauthorized_login">Incorrect email and / or password.</string>
    <string name="msg_service_unavailable">Service is currently unavailable.</string>
    <string name="msg_service_error">Service error. Please try again later.</string>
    
    <string name="msg_registration_details_required">Please fill in the First Name and Last Name fields.</string>
    <string name="msg_registration_details_check">Please check validity of your registration information.</string>
    
    
    <!-- Feature OK Messages -->
    <string name="msg_send_order_ok">Request sent.</string>
    <string name="msg_share_order_fb">Message posted to your wall.</string>
    
    <!-- Feature Error Messages -->
    <string name="msg_send_order_err">Service error sending order.</string>
    <string name="msg_send_order_400">Send order bad request.</string>
    <string name="msg_send_order_401">Unauthorized order request. Make sure you are checked-in at an ENVIVED location.</string>
    <string name="msg_send_order_405">Order sending not allowed in this ENVIVED location.</string>
    
    <string name="msg_get_orders_err">Error retrieving orders.</string>
    <string name="msg_get_order_400">Retrieve orders bad request.</string>
    <string name="msg_get_order_401">Unauthorized access to orders. Make sure you are checked-in at an ENVIVED location.</string>
    <string name="msg_get_order_405">Order retrieval not allowed in this ENVIVED location.</string>
    
    <string name="msg_send_entry_comment_ok">Comment sent.</string>
    
    <string name="msg_send_entry_comment_err">Service error sending comments.</string>
<!--<string name="msg_send_entry_comment_400">Send comment bad request.</string>
    <string name="msg_send_entry_comment_401">Unauthorized comment submission.</string>
    <string name="msg_send_entry_comment_405">Comment submission not allowed.</string>-->
    
    <string name="msg_get_entry_comments_err">Service error retrieving comments. Please try again later.</string>
    <string name="msg_send_entry_comment_400">Comment retrieval bad request.</string>
    <string name="msg_send_entry_comment_401">Unauthorized comment retrieval.</string>
    <string name="msg_send_entry_comment_405">Comment retrieval not allowed.</string>
    
    <string name="msg_get_entry_details_err">Service error retrieving program entry detail.</string>
    
    <string name="msg_share_order_fb_err">Unable to post message to wall. Please try again later.</string>

    <!-- Comments Messages -->
    <string name="msg_send_comment_ok">Comment Sent.</string>
    <string name="msg_send_comment_err">Error sending comment.</string>
    
    <!-- location browsing feature -->
    <string name="locations_checked_in_count">%1$s people checked in.</string>
    
    <!-- Feature Notifications -->
    <string name="incoming_order_request">New order request</string>
	<string name="resolved_order_request">We\'re on our way!</string>
	<string name="update_order_feature">Menu Update!</string>
	
	<!-- Feature Labels -->
	<string name="order_tab_title">Order Summary</string>
	<string name="order_mgr_filter_value">Showing: %1$s</string>
	<string name="order_mgr_filter_prompt">Filter requests by:</string>
	<string-array name="order_mgr_filter_array">
        <item>All Requests</item>
        <item>Order Requests</item>
        <item>Check Requests</item>
        <item>Waiter Requests</item>
    </string-array>
	
	
	<!-- GCM Notifications -->
	<string name="gcm_registered">Successfully registered for ENVIVED notifications.</string>
	<string name="gcm_unregistered">Unregistered from ENVIVED notifications.</string>
	<string name="gcm_register_error">Error registering for ENVIVED notifications. Please try again later.</string>
	
    <!-- Action strings -->
    <string name="action_notification">com.envsocial.android.intent.RECEIVE_NOTIFICATION</string>
    
</resources>