<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/order"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView android:id="@+id/location_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:text="@string/lbl_location_name" />
    <RelativeLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button android:id="@+id/btn_resolve"
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dip"
            android:layout_alignParentRight="true"
            android:text="@string/btn_resolve" />
        <TextView android:id="@+id/order_details"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btn_resolve"
            android:layout_marginTop="10dip"
            android:layout_marginLeft="10dip"
            android:text="@string/lbl_order_details" />
    </RelativeLayout>
</LinearLayout>