<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >
    <LinearLayout android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
			<Button android:id="@+id/btn_filter"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="5dip"
	            android:text="@string/btn_filter" />
	        <Button android:id="@+id/btn_history"
	            android:layout_width="0dip"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:layout_marginLeft="5dip"
	            android:text="@string/btn_history" />
    </LinearLayout>
	<ListView android:id="@android:id/list"
	    android:layout_above="@id/footer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
	<TextView android:id="@android:id/empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="10dip"
        android:textStyle="bold"
        android:text="@string/lbl_no_orders" />
</RelativeLayout>