<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/lbl_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lbl_subject" />
    

    <EditText
        android:id="@+id/msg_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="2"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_below="@+id/lbl_subject" >

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/lbl_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/msg_subject"
        android:text="@string/lbl_content"/>

    <EditText
        android:id="@+id/msg_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:lines="5"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:layout_below="@+id/lbl_content" />

    <LinearLayout 
        android:paddingLeft="4dip"
        android:paddingTop="5dip"
        android:paddingRight="4dip"
        android:paddingBottom="1dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/msg_content" >
        
	    <Button
	        android:id="@+id/btn_send"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_send"
	        android:layout_weight="1" />
	
	    <Button
	        android:id="@+id/btn_cancel"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/btn_cancel"
	        android:layout_weight="1" />

    </LinearLayout>

</RelativeLayout>