<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView android:text="@string/lbl_people_name"
				android:textStyle="bold" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="10dip"
				android:layout_marginRight="10dip" android:layout_marginBottom="5dip"
				android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/name"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_marginTop="10dip"
			android:layout_marginRight="10dip" android:layout_marginBottom="5dip"
			android:layout_marginLeft="10dip" />
    </LinearLayout> 
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
    	<TextView android:text="@string/lbl_people_affiliation"
			android:textStyle="bold" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:layout_marginRight="10dip" android:layout_marginBottom="5dip"
			android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/affiliation"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dip"
			android:layout_marginRight="10dip" 
			android:layout_marginBottom="5dip"
			android:layout_marginLeft="10dip" />
    </LinearLayout>
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView android:text="@string/lbl_people_research_interests"
			android:textStyle="bold" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_marginTop="10dip"
			android:layout_marginRight="10dip" android:layout_marginBottom="5dip"
			android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/research_interests"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:layout_marginTop="10dip"
			android:layout_marginRight="10dip" 
			android:layout_marginBottom="5dip"
			android:layout_marginLeft="10dip" />
	        
    </LinearLayout>
</LinearLayout>