<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:focusableInTouchMode="true" >
	    <TextView android:id="@+id/title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="bold"
	        android:layout_marginTop="10dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/speakers"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textStyle="italic"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="10dip" />
		<TextView android:id="@+id/session"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/datetime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="10dip"
	        android:layout_marginLeft="10dip" />
	    <TextView android:text="@string/lbl_abstract"
			android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="10dip" />
	    <TextView android:id="@+id/abs"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="10dip"
	        android:layout_marginLeft="10dip" />
	    <ListView android:id="@+id/comment_list"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent" />
	    <TextView android:text="@string/lbl_post_comment"
			android:textStyle="bold"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:layout_marginRight="10dip"
	        android:layout_marginBottom="5dip"
	        android:layout_marginLeft="10dip" />
	    <RelativeLayout android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
		    <Button android:id="@+id/btn_send"
		        android:text="@string/btn_send"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignParentRight="true"
		        android:layout_marginRight="5dip" />
			<EditText android:id="@+id/comment"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:layout_toLeftOf="@id/btn_send"
		        android:gravity="top"
		        android:lines="5"
		        android:inputType="textMultiLine"
		        android:scrollbars="vertical"
		        android:text="This is just some garbage text I am using for testing. It's supposed to be an entry annotation"
		        android:layout_marginRight="5dip"
		        android:layout_marginLeft="5dip" />
	    </RelativeLayout>
	</LinearLayout>
</ScrollView>